gp updates for theme toggle still

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -44,17 +44,12 @@
   &-cover {
     border-radius: 8px;
     margin: 40px -50px;
-    width: $max-width;
-    max-width: $max-width;
+    width: 860px;
+    max-width: 860px;
     @media #{$media-size-tablet} {
       margin: 20px 0;
       width: 100%;
     }
-  }
-
-  &-excerpt {
-    color: grey;
-    font-style: italic;
   }
 
   &-info {
@@ -118,7 +113,7 @@
       letter-spacing: 0.1em;
       z-index: 1;
 
-      @media (prefers-color-scheme: dark) {
+      .dark-theme & {
         background: $dark-background;
         color: $dark-color-secondary;
       }
@@ -160,7 +155,7 @@
   cursor: pointer;
   appearance: none;
 
-  @media (prefers-color-scheme: dark) {
+  .dark-theme & {
     background: $dark-background-secondary;
   }
 
