--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,31 +1,37 @@
 @charset "UTF-8";
 
-/* Light theme color */
-$light-background: #fff;
-$light-background-secondary: #eaeaea;
-$light-background-header: #fafafa;
-$light-color: #222;
-$light-color-secondary: #999;
-$light-border-color: #dcdcdc;
-$light-table-color: #dcdcdc;
+/* Colors -- a.la. Dracula */
+$background: #282a36;
+$curr-line: #44475a;
+$foreground: #f8f8f2;
+$comment: #6272a4;
+$cyan: #8be9fd;
+$green: #50fa7b;
+$orange: #ffb86c;
+$pink: #ff79c6;
+$purple: #bd93f9;
+$red: #ff5555;
+$yellow: #f1fa8c;
 
-/* Dark theme colors */
-$dark-background: #232425;
-$dark-background-secondary: #3b3d42;
-$dark-background-header: #1b1c1d;
-$dark-color: #a9a9b3;
-$dark-color-secondary: #b3b3bd;
-$dark-border-color: #4e4e57;
-$dark-table-color: #4e4e57;
+/* dark theme colors */
+$dark-background: $background;
+$dark-background-secondary: $curr-line;
+$dark-color: #6C6F82;
+$dark-color-secondary: #585B6E;
+$dark-border-color: $curr-line;
+/* light theme color */
+/* Dracula hates the light */
+$light-background: $dark-background;
+$light-background-secondary: $dark-background-secondary;
+$light-color: $dark-color;
+$light-color-secondary: $dark-color-secondary;
+$light-border-color: $dark-border-color;
 
 $media-size-phone: "(max-width: 684px)";
 $media-size-tablet: "(max-width: 900px)";
 
-/* Variables for js, must be the same as these in @custom-media queries */
+/* variables for js, must be the same as these in @custom-media queries */
 :root {
   --phoneWidth: (max-width: 684px);
   --tabletWidth: (max-width: 900px);
 }
-
-/* Content */
-$max-width: 860px;
