--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,10 +4,7 @@
         {{ partial "head.html" . }}
     </head>
 
-    {{ block "body" . }}
-        <body>
-    {{ end }}
-    
+    <body class="{{ if ne $.Site.Params.defaultTheme "light" -}} dark-theme {{- end -}}">
         <div class="container">
             {{ partial "header.html" . }}
 
