--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,9 +22,13 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" rel="stylesheet"
     type="text/css">
 
-{{ $options := (dict "targetPath" "main.css" "outputStyle" "compressed" "enableSourceMap" true) }}
-{{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options | resources.Fingerprint }}
+
+{{ $main := resources.Get "scss/main.scss" }}
+{{ $custom := resources.Get "scss/custom.scss" }}
+{{ $scss := slice $main $custom | resources.Concat "scss/custom.scss" }}
+{{ $style := $scss | toCSS | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
+
 
 {{ range $val := $.Site.Params.customCSS }}
     {{ if gt (len $val) 0 }}
